# ecommerce-data-lakehouse

./: .gitignore  README.md
backend/: database.py  kafka_producer.py  main.py  pyproject.toml  recommendation_scoring.py  redis_client.py  schemas.py
backend/scripts/: kafka_to_minio.py  smoke_test_api.py  verify_serving_layer.py
backend/tests/: test_api_contract.py  test_event_contract_isolated.py  test_generation_read_consistency.py  test_model_publication.py  test_model_publication_batch2.py  test_recent_category_candidates.py  test_recommendation_scoring.py  test_redis_category_contract.py  test_user_analytics_dag_source.py
docker/: .env.example  docker-compose.yml
docker/airflow/: Dockerfile
docker/dags/: ingest_bronze_dag.py  live_gold_dag.py  publish_recommendation_generation_dag.py  transform_gold_dag.py  transform_silver_dag.py  user_analytics_dag.py
docker/migrations/: 001_atomic_model_publication_v2.sql
docker/notebooks/: Audit_Bronze_Layer.ipynb  Audit_Silver_Layer.ipynb  Research_ALS.ipynb  Research_ContentBased_Filtering.ipynb  Research_Hybrid_Model.ipynb  Research_ItemBased_CF.ipynb.ipynb  Research_KMeans_Tuning.ipynb
docker/scripts/: analyze_user_clusters.py  common_config.py  create_recommendation_generation.py  database_identity.py  export_als_recommendations.py  export_content_based.py  export_item_based.py  export_popularity.py  fail_recommendation_generation.py  generate_cluster_recommendations.py  ingest_raw_to_bronze.py  (+15 more)
docs/: README.md
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+25 files in other folders)
