[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.14.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "psycopg2-binary>=2.9.11",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.46.0",
    "python-dotenv>=1.2.2",
    "minio>=7.2.20",
]
